# magic-wormhole-gui

./: .gitignore  HANDOFF.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
assets/: icon.icns
build-resources/: installer.nsh
docker/: Dockerfile
native/: Cargo.toml  index.d.ts  index.js  package.json
native/src/: error.rs  lib.rs  types.rs  wormhole.rs
scripts/: build-renderer.js  convert-icons.js  copy-static.js
src/main/: index.ts
src/main/ipc/: handlers.ts
src/main/services/: archiver.ts  docker.ts  native-wormhole.ts  wormhole.ts
src/main/utils/: paths.ts  process.ts  secure-delete.ts  validation.ts
src/preload/: index.ts
src/renderer/: bundle.js  index.html  index.ts  state.ts  styles.css
src/renderer/components/: ReceiveTab.ts  SendTab.ts
src/shared/: constants.js  constants.js.map  constants.ts  types.js  types.js.map  types.ts
src/types/: 7zip-bin.d.ts
