[package]
name = "wormhole-native"
version = "0.1.0"
edition = "2021"
description = "Native Magic Wormhole bindings for Electron"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "tokio_rt", "napi6"] }
napi-derive = "3"
tokio = { version = "1", features = ["full", "sync"] }

# Magic Wormhole - pinned version per PRD
magic-wormhole = "0.7"

# Async utilities
async-std = "1.12"
futures = "0.3"

# Logging
tracing = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
